kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapp
  labels:
    app: goapp
spec:
  selector:
    app: goapp
  ports:
    - port: 2112
